--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@chakra-ui/react": "^2.4.1",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "axios": "^1.2.0",
     "framer-motion": "^7.6.9",
     "mongoose": "^6.7.3",
     "next": "^13.0.4",
